# app/Http/Controllers/API/SkincareController.php
@@ -12,7 +12,7 @@ use OpenApi\Annotations as OA;
 /**
  * Class Skincare.
  *
- * @author Willy <willy.422023024@civitas.ukrida.ac.id>
+ * @type Willy <willy.422023024@civitas.ukrida.ac.id>
 */
 class SkincareController extends Controller
 {
@@ -26,12 +26,105 @@ class SkincareController extends Controller
      *         response=200,
      *         description="successful",
      *         @OA\JsonContent()
-     *     )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_skincare seller",
+     *         in="query",
+     *         description="search by skincare seller like name",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_sort_by",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="latest"
+     *         )
+     *     ),
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return Skincare::get();
+        try {
+            $data['filter']       = $request->all();
+            $page                 = $data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit                = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset               = ($page?($page-1)*$limit:0);
+            $data['products']     = Skincare::whereRaw('1 = 1');
+            
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(brand) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_category')){
+                $data['products'] = $data['products']->whereRaw('LOWER(category) = "'.strtolower($request->get('_category')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_added':
+                $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;
+                case 'nama_asc':
+                $data['products'] = $data['products']->orderBy('nama','ASC');
+                break;
+                case 'nama_desc':
+                $data['products'] = $data['products']->orderBy('nama','DESC');
+                break;
+                case 'price_asc':
+                $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+            }
+            $data['products_count_total']   = $data['products']->count();
+            $data['products']               = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']       = $data['products']->toSql();
+            $data['products']               = $data['products']->get();
+            $data['products_count_start']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']     = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+           return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
     }
 
     /**
@@ -55,12 +148,12 @@ class SkincareController extends Controller
      *         description="Request body description",
      *         @OA\JsonContent(
      *             ref="#/components/schemas/Skincare",
-     *             example={"nama": "Cetaphil Gentle Skin Cleanser",
-     *                      "brand": "Cetaphil",
-     *                      "category": "Cleanser (Pembersih Wajah)",
+     *               example={"name": "Cetaphil Gentle Skin Cleanser",
+     *                      "brand": "Cepaphil",
+     *                      "category": "Cleanser (pembersih wajah)",
      *                      "price": "150000",
      *                      "stock": "1000",
-     *                      "description": "Cetaphil Gentle Skin Cleanser adalah pembersih wajah yang diformulasikan untuk kulit sensitif..",
+     *                      "description": "Ceptaphil Gentle Skin Cleanser adalah pembersih wajah yang diformulasikan untuk kulit sensitif.",
      *                      "image": "https://tse4.mm.bing.net/th?id=OIP.4lndUWsMx42RQGJSicHXKAHaHa&pid=Api&P=0&h=180"
      *                     }
      *         ),
@@ -68,12 +161,13 @@ class SkincareController extends Controller
      *     security={{"passport_token_ready":{},"passport":{}}}
      * )
      */
+
     public function store(Request $request)
     {
         try {
             $validator = Validator::make($request->all(), [
-                'nama' => 'required',
-                'brand' => 'required',
+                'name' => 'required',
+                'type' => 'required',
             ]);
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->messages()->first());
@@ -165,30 +259,31 @@ class SkincareController extends Controller
      *          description="Request body description",
      *          @OA\JsonContent(
      *              ref="#/components/schemas/Skincare",
-     *             example={"nama": "Kiehl's Ultra Facial Cream",
-     *                      "brand": "Kiehl's",
-     *                      "category": "Moisturizer (Pelembap)",
-     *                      "price": "200000",
-     *                      "stock": "1500",
-     *                      "description": "Pelembap yang memberikan hidrasi 24 jam dengan tekstur ringan dan cepat meresap.",
-     *                      "image": "https://feelunique.com/cdn-cgi/image/quality=75,format=auto,metadata=none,dpr=1/img/products/61024/alternative/Kiehl__039_s_Ultra_Facial_Cream_50ml_1_1523698750.jpg"
+     *              example={"name": "Kiehl's Ultra Facial Cream",
+     *                       "brand": "Kiehl's",
+     *                       "category": "Moisturizer(pelembap)",
+     *                       "price": "200000",
+     *                       "stock": "1000",
+     *                       "description": "Pelembap yang memberikan hidrasi 24 jam dengan tekstur ringan dan cepat meresap.",
+     *                       "image":"https://feelunique.com/cdn-cgi/image/quality=75,format=auto,metadata=none,dpr=1/img/products/61024/alternative/Kiehl__039_s_Ultra_Facial_Cream_50ml_1_1523698750.jpg",
      *                      }
      *          ),
      *      ),
      *     security={{"passport_token_ready":{},"passport":{}}}
      * )
      */
+
     public function update(Request $request, string $id)
     {
-        $skincare = Skincare::find($id);
+        $skincares = Skincare::find($id);
         if(!$skincares) {
             throw new HttpException (404, 'Item not found');
         }
 
         try {
             $validator = Validator:: make($request->all(), [
-                'nama' => 'required',
-                'brand' => 'required',
+                'name' => 'required',
+                'type' => 'required',
             ]);
             if ($validator->fails()) {
                 throw new HttpException (400, $validator->messages()->first());
@@ -238,12 +333,12 @@ class SkincareController extends Controller
     public function destroy(string $id)
     {
         $skincares = Skincare::find($id);
-        if(!$skincare) {
+        if(!$skincares) {
             throw new HttpException (404, 'Item not found');
         }
     
         try {
-            $skincare->delete();
+            $skincares->delete();
             return response()->json(array('message' => 'Deleted successfully'), 200);
 
         } catch(\Exception $exception) {
