# resources/views/components/footer.blade.php
@@ -1,0 +1,82 @@
+<!-- footer -->
+<div class="footer-area-wrapper bg-white">
+    <div class="footer-area section-space--pb_90">
+        <div class="container-fluid container-fluid--cp-100">
+            <div class="row footer-widget-wrapper">
+
+                <div class="col-lg-3 col-md-4 col-sm-6 footer-widget">
+                    <h6 class="footer-widget__title mb-20">Customer Service</h6>
+                    <ul class="footer-widget__list">
+                        <li><a href="#" class="hover-style-link">Help & Contact Us</a></li>
+                        <li><a href="#" class="hover-style-link">Returns & Refunds</a></li>
+                        <li><a href="#" class="hover-style-link">Online Stores</a></li>
+                        <li><a href="#" class="hover-style-link">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 footer-widget">
+                    <h6 class="footer-widget__title mb-20">Company</h6>
+                    <ul class="footer-widget__list">
+                        <li><a href="#" class="hover-style-link">About Us</a></li>
+                        <li><a href="#" class="hover-style-link">What We Do</a></li>
+                        <li><a href="#" class="hover-style-link">FAQ Page</a></li>
+                        <li><a href="#" class="hover-style-link">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 footer-widget">
+                    <h6 class="footer-widget__title mb-20">Social Media</h6>
+                    <ul class="footer-widget__list">
+                        <li><a href="#" class="hover-style-link">Facebook</a></li>
+                        <li><a href="#" class="hover-style-link">Twitter</a></li>
+                        <li><a href="#" class="hover-style-link">Instagram</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 footer-widget">
+                    <h6 class="footer-widget__title mb-20">Newsletter</h6>
+                    <div class="footer-widget__newsletter mt-30">
+                        <input type="text" placeholder="Your email address">
+                        <button class="submit-button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <ul class="footer-widget__footer-menu  section-space--mt_60 d-none d-lg-block">
+                        <li><a href="#">Term & Condition</a></li>
+                        <li><a href="#">Policy</a></li>
+                        <li><a href="#">Map</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright-area border-top section-space--ptb_30">
+        <div class="container-fluid container-fluid--cp-100">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6 order-md-1 order-2">
+                    <span class="copyright-text text-center text-md-start">&copy; 2024 Skincare. <a  href="https://hasthemes.com/" target="_blank">All Rights Reserved.</a></span>
+
+                </div>
+
+                <div class="col-lg-6 col-md-6 order-md-2 order-1">
+                    <div class="footer-bottom-social">
+                        <h6 class="title">Follow Us On Social</h6>
+                        <ul class="list footer-social-networks ">
+                            <li class="item">
+                                <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+                                    <i class="social social_facebook"></i>
+                                </a>
+                            </li>
+                            <li class="item">
+                                <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+                                    <i class="social social_twitter"></i>
+                                </a>
+                            </li>
+                            <li class="item">
+                                <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+                                    <i class="social social_instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end of footer -->
