# routes/web.php
@@ -1,7 +1,16 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\SkincareController;
 
 Route::get('/', function () {
-    return view('welcome');
-});
+    return view('pages.home');
+})->name('home');
+
+Route::get('/skincare', function () {
+    return view('pages.plp');
+})->name('plp');
+
+Route::get('/skincare/{i}', function () {
+    return view('pages.pdp');
+})->name('pdp');
